src/objects/bizible2__Bizible_Person__c.object
<CustomObject>
    <fields>
        <fullName>Bizible_Person_Name__c</fullName>
        <formula>IF(ISBLANK (bizible2__Contact__c), bizible2__Lead__r.Full_Name__c, bizible2__Contact__r.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Safe_ID__c</fullName>
        <formula>bizible2__Contact__r.Contact_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_ID__c</fullName>
        <formula>bizible2__Lead__r.Lead_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bizible_Parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Bizible_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Bizible_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bizible Person</label>
    <nameField>
        <label>Person Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>